--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,21 @@
 name: sajili_mobile
 description: A university students' attendance mobile application
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.1 <3.0.0'
+  sdk: ">=2.19.1 <3.0.0"
 
 dependencies:
+  camera: ^0.10.3
   flutter:
     sdk: flutter
+  geolocator: ^9.0.2
+  get: ^4.6.5
+  get_storage: ^2.0.3
+  google_mlkit_face_detection: ^0.5.0
+  image_picker: ^0.8.6+1
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +24,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: Quicksand
+      fonts:
+        - asset: fonts/Quicksand.ttf
+        
