--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: sajili_mobile
-description: A university students' attendance mobile application
+description: A university students' attendance mobile application for lecturers and students
 publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ">=2.19.1 <3.0.0"
+  sdk: ">=2.19.4 <3.0.0"
 
 dependencies:
   camera: ^0.10.3
@@ -14,7 +14,9 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.0.3
   google_mlkit_face_detection: ^0.5.0
+  http: ^0.13.5
   image_picker: ^0.8.6+1
+  location: ^4.4.0
   path_provider: ^2.0.12
 
 dev_dependencies:
