--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=2.19.4 <3.0.0"
 
 dependencies:
+  android_alarm_manager_plus: ^2.1.3
   camera: ^0.10.3
   flutter:
     sdk: flutter
@@ -14,15 +15,22 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.0.3
   google_mlkit_face_detection: ^0.5.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: ^0.13.5
   image_picker: ^0.8.6+1
   location: ^4.4.0
   path_provider: ^2.0.12
+  flutter_local_notifications: ^14.0.0
+  cron: ^0.5.1
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
 
 flutter:
   uses-material-design: true
