--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,19 +11,18 @@ dependencies:
   camera: ^0.10.3
   flutter:
     sdk: flutter
-  easy_geofencing: ^0.2.0
   get: ^4.6.5
+  geolocator: ^9.0.2
   get_storage: ^2.0.3
   google_mlkit_face_detection: ^0.5.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   http: ^0.13.5
   image_picker: ^0.8.6+1
-  location: ^4.4.0
   path_provider: ^2.0.12
   flutter_local_notifications: ^14.0.0
-  cron: ^0.5.1
   timezone: ^0.9.2
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
